--- a/sajt/CSS1.css
+++ b/sajt/CSS1.css
@@ -51,3 +51,15 @@ table{
   font-size:20;
   font-family:Times;
 }
+
+.slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 15px;
+  border-radius: 5px;   
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
